src/objects/wbsendit__Subscriber_List__c.object
<CustomObject>
    <description>Contains the Campaign Monitor subscriber lists.</description>
    <fields>
        <fullName>wbsendit__BouncesThisMonth__c</fullName>
        <label>Bounces This Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__BouncesThisWeek__c</fullName>
        <label>Bounces This Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__BouncesThisYear__c</fullName>
        <label>Bounces This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__BouncesToday__c</fullName>
        <label>Bounces Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__BouncesYesterday__c</fullName>
        <label>Bounces Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Monitor_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Monitor Client</label>
        <referenceTo>wbsendit__Client__c</referenceTo>
        <relationshipLabel>Subscriber Lists</relationshipLabel>
        <relationshipName>Subscriber_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__Client_ID__c</fullName>
        <label>Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Client_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + wbsendit__Campaign_Monitor_Client__r.Id, wbsendit__Campaign_Monitor_Client__r.wbsendit__Client_Name__c, &quot;_self&quot;)</formula>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Confirmation_Success_Page__c</fullName>
        <label>Confirmation Success Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wbsendit__Create_Rule_Record_Type__c</fullName>
        <inlineHelpText>Developer name of the default record type to use when creating Leads/Contacts.</inlineHelpText>
        <label>Create Rule Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Create_Rule__c</fullName>
        <defaultValue>&quot;ACTION_DO_NOTHING&quot;</defaultValue>
        <label>Create Rule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTION_DO_NOTHING</fullName>
                    <default>true</default>
                    <label>Don&apos;t Create</label>
                </value>
                <value>
                    <fullName>ACTION_CREATE_CONTACT</fullName>
                    <label>Create Contact</label>
                </value>
                <value>
                    <fullName>ACTION_CREATE_LEAD</fullName>
                    <label>Create Lead</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__DeletedThisMonth__c</fullName>
        <label>Deleted This Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__DeletedThisWeek__c</fullName>
        <label>Deleted This Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__DeletedThisYear__c</fullName>
        <label>Deleted This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__DeletedToday__c</fullName>
        <label>Deleted Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__DeletedYesterday__c</fullName>
        <label>Deleted Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Last_Synced__c</fullName>
        <inlineHelpText>Date and time this list was last synced with Campaign Monitor.</inlineHelpText>
        <label>Last Synced</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wbsendit__List_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Campaign Monitor subscriber list Id.</description>
        <externalId>true</externalId>
        <label>List Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>wbsendit__List_Name__c</fullName>
        <label>List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__List_Type__c</fullName>
        <inlineHelpText>&quot;Single opt-in&quot; means new subscribers are added to this list as soon as they complete the subscribe form. &quot;Confirmed opt-in&quot; means a confirmation email will be sent with a link they must click to validate their address.</inlineHelpText>
        <label>List Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single opt-in (no confirmation required)</fullName>
                    <default>true</default>
                    <label>Single opt-in (no confirmation required)</label>
                </value>
                <value>
                    <fullName>Confirmed opt-in (confirmation required)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__NewActiveSubscribersThisMonth__c</fullName>
        <label>New Active Subscribers This Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__NewActiveSubscribersThisWeek__c</fullName>
        <label>New Active Subscribers This Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__NewActiveSubscribersThisYear__c</fullName>
        <label>New Active Subscribers This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__NewActiveSubscribersToday__c</fullName>
        <label>New Active Subscribers Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__NewActiveSubscribersYesterday__c</fullName>
        <label>New Active Subscribers Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Prevent_Member_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Save space by preventing the individual subscriber membership records from syncing to Salesforce.</inlineHelpText>
        <label>Prevent Member Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wbsendit__Subscriber_List__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + Id,  wbsendit__List_Name__c, &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Subscriber_Start_Sync__c</fullName>
        <inlineHelpText>This is the time the sync from CM to SF started for this list.</inlineHelpText>
        <label>Subscriber Start Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wbsendit__Unsubscribe_Page__c</fullName>
        <label>Unsubscribe Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wbsendit__Unsubscribe_Setting__c</fullName>
        <inlineHelpText>If unsubscribe setting is set to &quot;All Client Lists&quot;, when someone unsubscribes from this list they will also be unsubscribed from all the client&apos;s lists (recommended). If set to &quot;Only This List&quot;, when someone unsubscribes from this list.</inlineHelpText>
        <label>Unsubscribe Setting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Client Lists</fullName>
                </value>
                <value>
                    <fullName>Only This List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__UnsubscribesThisMonth__c</fullName>
        <label>Unsubscribes This Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__UnsubscribesThisWeek__c</fullName>
        <label>Unsubscribes This Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__UnsubscribesThisYear__c</fullName>
        <label>Unsubscribes This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__UnsubscribesToday__c</fullName>
        <label>Unsubscribes Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__UnsubscribesYesterday__c</fullName>
        <label>Unsubscribes Yesterday</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__totalActiveSubscribers__c</fullName>
        <label>Total Active Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__totalBounces__c</fullName>
        <label>Total Bounces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__totalDeleted__c</fullName>
        <label>Total Deleted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__totalUnconfirmed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Unconfirmed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__totalUnsubscribes__c</fullName>
        <label>Total Unsubscribes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Subscriber List</label>
    <listViews>
        <fullName>wbsendit__All</fullName>
        <columns>NAME</columns>
        <columns>wbsendit__List_Name__c</columns>
        <columns>wbsendit__Prevent_Member_Sync__c</columns>
        <columns>wbsendit__totalActiveSubscribers__c</columns>
        <columns>wbsendit__totalBounces__c</columns>
        <columns>wbsendit__totalDeleted__c</columns>
        <columns>wbsendit__totalUnsubscribes__c</columns>
        <columns>wbsendit__Unsubscribe_Setting__c</columns>
        <columns>wbsendit__List_Type__c</columns>
        <columns>wbsendit__Client_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Subscriber List Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriber Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>